--- a/program1.ipynb
+++ b/program1.ipynb
@@ -22,6 +22,9 @@
     "using MAT\n",
     "using JLD2\n",
     "using DSP\n",
+    "    # myNum = 3\n",
+    "    # myNumA = myNum*2 + 1\n",
+    "    # hammingW = DSP.Windows.hamming(myNumA);"
    ]
   },
   {
